Fix footer overflow on xs devices

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -487,7 +487,7 @@
 
   .login-navbar {
   display: block;
-}
+  }
 
   .aboutus-rows {
     padding-top: 0;
@@ -691,6 +691,10 @@
     top: 55%;
     left: 50%;
     opacity: 1;
+  }
+
+  .list-group-item {
+    padding-left: 0;
   }
 
 }
